# MoodleDocsRAG

./: .gitignore  README.md  app.py  config.py  docker-compose.yaml  fill_qdrant.py  prepare_data.py  pyproject.toml
data_notebooks/: embeddings.ipynb  fill_qdrant.ipynb  prepare_data.ipynb  summaries.ipynb
test_folder/: test.ipynb
