[project]
name = "moodlebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "fastembed>=0.7.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-text-splitters>=0.3.8",
    "llama-index>=0.12.47",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "more-itertools>=10.7.0",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
